[gd_scene load_steps=2 format=3 uid="uid://sssm"]

[ext_resource type="Script" uid="uid://b5laq3of2rw0t" path="res://multiplayer_menu/main.gd" id="1_abcde"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -52.0
offset_right = 58.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="FindPublicGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Find Public Game"

[node name="JoinPrivateGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Private Game"

[node name="HostGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
